<resources>
    <string name="app_name">Proyecto Karaoke</string>
    <string name="action_settings">Settings</string>
    <string name="action_musicas">Settings</string>
    <string name="action_option">Por artista</string>
    <string name="title_activity_piqueo_catalogo">Catalogo de Piqueos</string>
    <string name="title_activity_ubicame">Ubicame</string>
    <string name="title_activity_reservar_mesa">Reservar Mesa</string>
    <string name="title_activity_bienvenida">Bienvenida</string>
    <string name="title_activity_musicas">Catalogo Musicas</string>
    <string name="mesa">MESA A1KARAOKE</string>
    <string name="ingreso">Ingresar</string>
    <string name="catalogo">Catalogo</string>
    <string name="canciones">Canciones Enviadas</string>
    <string name="favoritos">Mis favoritos</string>
    <string name="piqueos">Piqueos</string>
    <string name="ubicame">Ubicame</string>
    <string name="ReservaMesa">Reserva Mesa</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="buttongrabar">Grabar</string>
    <string name="buttoncancelar">Cancelar</string>
    <string name="total_pedido">Total pedido: </string>
    <string name="confirmaci_n_de_pedido">Confirmación de Pedido</string>
    <string name="producto">Producto:</string>
    <string name="reservar">Reservar</string>
    <string name="tel_fono">Teléfono:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="nombres">Nombres:</string>
    <string name="dni">DNI:</string>
</resources>
